# emtm-server

./: .dockerignore  .env  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  README.md  crate-io-china  crate-io-ustc  docker-compose.yml
emtm-db/: .gitignore  Cargo.toml  LICENSE  README.md
emtm-db/examples/: migrate.rs  performance.rs  show.rs  update_user.rs
emtm-db/migrations/2019-05-12-042905_schools_codes/: down.sql  schools.txt  up.sql
emtm-db/migrations/2019-05-13-081701_emtm_users/: down.sql
emtm-db/migrations/2019-05-22-022634_missions/: down.sql  up.sql
emtm-db/migrations/2019-06-10-143138_emtm_survey/: down.sql
emtm-db/migrations/2019-06-10-152232_emtm_trade_errand/: up.sql
emtm-db/src/: db_error.rs
emtm-db/src/controller/: errand_controller.rs  school_controller_zh.rs  user_controller.rs
emtm-db/src/db_models/: missions.rs  mod.rs  survey.rs  trade.rs
emtm-db/src/models/: errand.rs  missions.rs  trade.rs
emtm-db/test/: mission_operation_test.rs
emtm-db/tests/: errand_operation_test.rs  errand_test.rs  school_operation_test.rs  search_operation_test.rs  user_operation_test.rs
emtm-verify/: Cargo.toml
emtm-web/: Cargo.toml
examples/: add_cows.rs  add_student.rs  migrate.rs  performance.rs  search.rs  show.rs  update_user.rs
scripts/: entrypoint.sh  setup_db.sh  setup_test_db.sh
src/: db_error.rs  lib.rs  schema.rs
tests/: errand_operation_test.rs  mission_operation_test.rs  performance_test.rs  school_operation_test.rs  search_test.rs  survey_operation_test.rs  trade_operation_test.rs  user_operation_test.rs
(+62 files in other folders)
