[package]
name = "emtm_db"
version = "0.1.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.0", features = ["mysql", "chrono"] }
chrono = "0.4.6"
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
tantivy = "0.9.0"
cang-jie = "0.3.0"
jieba-rs = "0.2"
